_extensions/aagi/aagi.scss
/*-- scss:defaults --*/

// fonts

// FiraCode is OpenSource and looks nice, so we'll use it here
@import url(https://cdn.rawgit.com/tonsky/FiraCode/1.204/distr/fira_code.css);

// define AAGI colours

$colors: (
  "aagi-black": #414042,
  "aagi-blue": #648fd2,
  "aagi-bright-green": #b6d438,
  "aagi-green": #54921e,
  "aagi-grey": #f2f2f2,
  "aagi-orange": #ec8525,
  "aagi-teal": #00808b,
  "aagi-yellow": #ffbc42,
);

// functions
// From Emil Hvitfeldt, <https://emilhvitfeldt.com/post/slidecraft-scss-uses/>

@function theme-color($color) {
  @return map-get($colors, $color);
}

// colours

$link-color: theme-color("aagi-teal") !default;
$body-color: theme-color("aagi-black") !default;

// fonts

$font-family-sans-serif: "Proxima Nova", Arial;
$font-family-monospace: "Fira Code";

$presentation-h1-font-size: 2em;
$presentation-h2-font-size: 1.75em;
$presentation-h3-font-size: 1.5em;
$presentation-font-size-root: 2em;


/*-- scss:rules --*/

.reveal h1 {
  font-weight: lighter;
}

.reveal h3 {
  font-weight: lighter;
}

.reveal p li {
  font-weight: lighter;
}

.quarto-title-authors {
  font-size: 28px;
}

.reveal .slides {
  margin-bottom: 5%;
}

.reveal .footer {
  color: #ffffff !important;
  background-color: theme-color("aagi-teal"); 
  display: inline-block ;
  height: 1em;
  bottom: 50px !important; // Makes footer div flush with bottom of slide
  z-index: -99 !important; // Sets the footer div further down the z-index
}

.reveal table,
th,
td {
  border: 2px solid #ffffff;
  background: theme_color("aagi-grey");
  color: theme_color("aagi-black");
}

.reveal table th {
  color: #ffffff;
  background:theme-color("aagi-teal");
}

